cmake_minimum_required(VERSION 3.15)
project(InterviewAlgo)

set(CMAKE_CXX_STANDARD 11)

add_executable(InterviewAlgo LRUcache.cpp LRUcache.h)
ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABAQC2Jl4Cz2D5NsskfeyySWjrWwshVu3zC4oWVxt8VZVWhRzhbbvFTfe8Un0UGWZOPjWoWSu5STxCZ2d77fxMzPSZam0jHxV+KHR4QihaDXA+sK1HSOZa/1aqJEymRVWghHWuwXqNCSPwfqR6AWLIglZbWRHv9klIQe2L6KlwbQXNTNeBlGDF8IqkBiS23J/yjPLbYcQly8L88m3bwxjO53cxd3yArFVgKbinZIS2zzr/0J94md6cQFmKSvl5xCMDUA49g0NAjsrrAAhAvthR8pwwt8xyw+rOPFF0/4dI8IHk62GXhNCx5cwlz3IXWaqpGZd71azGmZwjPmn+vMuhxl/x yanxiaowei@W0112888
